Hero Spline object added | Splash loader change

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@rainbow-me/rainbowkit": "^2.2.7",
+    "@splinetool/react-spline": "^4.0.0",
     "@tanstack/react-query": "^5.80.7",
     "@wagmi/connectors": "^5.8.5",
     "@wagmi/core": "^2.17.3",
@@ -51,8 +52,10 @@
     "embla-carousel-react": "8.5.1",
     "ethers": "^6.14.4",
     "firebase": "^11.9.0",
+    "framer-motion": "^12.19.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "motion": "^12.19.1",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
@@ -67,7 +70,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.4",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "viem": "~2.31.0",
