--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ethers": "^6.14.4",
     "firebase": "^11.9.0",
     "framer-motion": "^12.19.1",
+    "gsap": "^3.13.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "motion": "^12.19.1",
