--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@rainbow-me/rainbowkit": "^2.2.7",
+    "@shadcn/ui": "^0.0.4",
     "@splinetool/react-spline": "^4.0.0",
     "@tanstack/react-query": "^5.80.7",
     "@wagmi/connectors": "^5.8.5",
