--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gsap": "^3.13.0",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "lenis": "^1.3.4",
     "lucide-react": "^0.454.0",
     "motion": "^12.19.1",
     "next": "15.2.4",
